# voice-triage-poc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  baseprompt.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BYO_INFERENCE_REFERENCE.md  DECISIONS.md  MCP_REFERENCE.md  TELEPHONY_INTEGRATIONS.md  TELEPHONY_REFERENCE.md
kb/: allotments_costs_waiting_lists.md  allotments_renting.md  allotments_rules_regulations.md  allotments_sites_locations.md  beach_bylaws.md  bins_bulky_waste.md  bins_clinical_waste.md  bins_collection_schedule.md  bins_garden_waste.md  bins_missed_collection.md  bins_new_or_bigger_bin.md  bins_what_goes_where.md  council_events.md  counciltax_move_home.md  counciltax_single_person_discount.md  customer_services_contact.md  dogs_licensing.md  education_free_school_meals.md  education_school_admissions.md  education_school_transport.md  emergency_preparedness.md  employment_jobs.md  environmental_flytipping.md  environmental_graffiti.md  environmental_street_cleaning.md  governance_complaints_procedure.md  governance_equality_diversity.md  governance_ethics_standards.md  governance_foi_request.md  governance_gdpr_data_protection.md  governance_pii_handling.md  housing_anti_social_behaviour.md  housing_apply_council_housing.md  housing_homelessness_help.md  housing_housing_benefit.md  housing_report_repair.md  leisure_centres.md  libraries_join_library.md  licensing_alcohol_premises.md  licensing_entertainment_licence.md  (+33 more)
plans/: telephony-decomposition-plan.md  telephony-oob-execution-checklist.md
(+176 files in other folders)
