[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "voice-triage-poc"
version = "0.1.0"
description = "Local voice triage POC scaffold (whisper.cpp + RAG + workflow stubs)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0",
  "pathvalidate>=3.2.0",
  "piper-tts>=1.4.1",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "sounddevice>=0.4.7",
  "uvicorn>=0.30.0",
]

[project.scripts]
voice_triage = "voice_triage.app.demo:main"

[project.optional-dependencies]
mcp = [
  "mcp>=1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "interrogate>=1.7.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["voice_triage"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.interrogate]
fail-under = 100
ignore-init-method = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
exclude = ["tests", ".venv", "data"]
verbose = 1

[tool.hatch.build.targets.wheel]
packages = ["voice_triage"]
